2
cpu.cpp: In function ‘ErrorCode executeInstruction(Processor*, size_t*)’:
cpu.cpp:57:32: error: ‘cpuHlt’ was not declared in this scope; did you mean ‘cpuOut’?
   57 |         case CMD_HLT:   return cpuHlt(index);
      |                                ^~~~~~
      |                                cpuOut
In file included from cpu.cpp:7:
cpu.cpp: In function ‘ErrorCode cpuStack(Processor*, size_t*)’:
cpu.h:9:15: warning: comparison between ‘enum ErrorCode’ and ‘enum StackError’ [-Wenum-compare]
    9 |     ((result) == SUCCESS ? ERR_OK : ERR_FILE_OPEN)
      |      ~~~~~~~~~^~~~~~~~~~
cpu.cpp:71:32: note: in expansion of macro ‘STACK_ERR’
   71 |         case CMD_PUSH:  return STACK_ERR(cpuPushValue(cpu, index));
      |                                ^~~~~~~~~
cpu.h:9:15: warning: comparison between ‘enum ErrorCode’ and ‘enum StackError’ [-Wenum-compare]
    9 |     ((result) == SUCCESS ? ERR_OK : ERR_FILE_OPEN)
      |      ~~~~~~~~~^~~~~~~~~~
cpu.cpp:72:32: note: in expansion of macro ‘STACK_ERR’
   72 |         case CMD_PUSHR: return STACK_ERR(cpuPushRegister(cpu, index));
      |                                ^~~~~~~~~
cpu.h:9:15: warning: comparison between ‘enum ErrorCode’ and ‘enum StackError’ [-Wenum-compare]
    9 |     ((result) == SUCCESS ? ERR_OK : ERR_FILE_OPEN)
      |      ~~~~~~~~~^~~~~~~~~~
cpu.cpp:73:32: note: in expansion of macro ‘STACK_ERR’
   73 |         case CMD_POPR:  return STACK_ERR(cpuPopRegister(cpu, index));
      |                                ^~~~~~~~~
cpu.cpp:70:12: warning: enumeration value ‘CMD_HLT’ not handled in switch [-Wswitch-enum]
   70 |     switch ((Instruction)cpu->code.buffer[*index]) {
      |            ^
cpu.cpp:70:12: warning: enumeration value ‘CMD_ADD’ not handled in switch [-Wswitch-enum]
cpu.cpp:70:12: warning: enumeration value ‘CMD_SUB’ not handled in switch [-Wswitch-enum]
cpu.cpp:70:12: warning: enumeration value ‘CMD_DIV’ not handled in switch [-Wswitch-enum]
cpu.cpp:70:12: warning: enumeration value ‘CMD_MUL’ not handled in switch [-Wswitch-enum]
cpu.cpp:70:12: warning: enumeration value ‘CMD_SQRT’ not handled in switch [-Wswitch-enum]
cpu.cpp:70:12: warning: enumeration value ‘CMD_IN’ not handled in switch [-Wswitch-enum]
cpu.cpp:70:12: warning: enumeration value ‘CMD_OUT’ not handled in switch [-Wswitch-enum]
cpu.cpp:70:12: warning: enumeration value ‘CMD_JMP’ not handled in switch [-Wswitch-enum]
cpu.cpp:70:12: warning: enumeration value ‘CMD_JB’ not handled in switch [-Wswitch-enum]
cpu.cpp:70:12: warning: enumeration value ‘CMD_JBE’ not handled in switch [-Wswitch-enum]
cpu.cpp:70:12: warning: enumeration value ‘CMD_JA’ not handled in switch [-Wswitch-enum]
cpu.cpp:70:12: warning: enumeration value ‘CMD_JAE’ not handled in switch [-Wswitch-enum]
cpu.cpp:70:12: warning: enumeration value ‘CMD_JE’ not handled in switch [-Wswitch-enum]
cpu.cpp:70:12: warning: enumeration value ‘CMD_JNE’ not handled in switch [-Wswitch-enum]
cpu.cpp: In function ‘ErrorCode cpuPushRegister(Processor*, size_t*)’:
cpu.cpp:104:21: warning: comparison of integer expressions of different signedness: ‘int’ and ‘const size_t’ {aka ‘const long unsigned int’} [-Wsign-compare]
  104 |     if (register_id >= REGISTER_COUNT || register_id < 0)
      |         ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
cpu.cpp: In function ‘ErrorCode cpuPopRegister(Processor*, size_t*)’:
cpu.cpp:122:21: warning: comparison of integer expressions of different signedness: ‘int’ and ‘const size_t’ {aka ‘const long unsigned int’} [-Wsign-compare]
  122 |     if (register_id >= REGISTER_COUNT || register_id < 0)
      |         ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
cpu.cpp: In function ‘ErrorCode cpuArithmetic(Processor*, size_t*)’:
cpu.h:9:15: warning: comparison between ‘enum ErrorCode’ and ‘enum StackError’ [-Wenum-compare]
    9 |     ((result) == SUCCESS ? ERR_OK : ERR_FILE_OPEN)
      |      ~~~~~~~~~^~~~~~~~~~
cpu.cpp:146:12: note: in expansion of macro ‘STACK_ERR’
  146 |     return STACK_ERR(cpuPushArithmetic(cpu, value1, value2, instruction));
      |            ^~~~~~~~~
cpu.cpp: In function ‘ErrorCode cpuPushArithmetic(Processor*, int, int, Instruction)’:
cpu.cpp:154:12: warning: enumeration value ‘CMD_HLT’ not handled in switch [-Wswitch-enum]
  154 |     switch (instruction) {
      |            ^
cpu.cpp:154:12: warning: enumeration value ‘CMD_PUSH’ not handled in switch [-Wswitch-enum]
cpu.cpp:154:12: warning: enumeration value ‘CMD_SQRT’ not handled in switch [-Wswitch-enum]
cpu.cpp:154:12: warning: enumeration value ‘CMD_IN’ not handled in switch [-Wswitch-enum]
cpu.cpp:154:12: warning: enumeration value ‘CMD_OUT’ not handled in switch [-Wswitch-enum]
cpu.cpp:154:12: warning: enumeration value ‘CMD_JMP’ not handled in switch [-Wswitch-enum]
cpu.cpp:154:12: warning: enumeration value ‘CMD_JB’ not handled in switch [-Wswitch-enum]
cpu.cpp:154:12: warning: enumeration value ‘CMD_JBE’ not handled in switch [-Wswitch-enum]
cpu.cpp:154:12: warning: enumeration value ‘CMD_JA’ not handled in switch [-Wswitch-enum]
cpu.cpp:154:12: warning: enumeration value ‘CMD_JAE’ not handled in switch [-Wswitch-enum]
cpu.cpp:154:12: warning: enumeration value ‘CMD_JE’ not handled in switch [-Wswitch-enum]
cpu.cpp:154:12: warning: enumeration value ‘CMD_JNE’ not handled in switch [-Wswitch-enum]
cpu.cpp:154:12: warning: enumeration value ‘CMD_PUSHR’ not handled in switch [-Wswitch-enum]
cpu.cpp:154:12: warning: enumeration value ‘CMD_POPR’ not handled in switch [-Wswitch-enum]
cpu.cpp: In function ‘ErrorCode cpuJump(Processor*, size_t*)’:
cpu.cpp:196:12: warning: operation on ‘* index’ may be undefined [-Wsequence-point]
  196 |     *index = (size_t)cpu->code.buffer[++(*index)];
      |     ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cpu.cpp: In function ‘bool comparator(int, int, Instruction)’:
cpu.cpp:206:12: warning: enumeration value ‘CMD_HLT’ not handled in switch [-Wswitch-enum]
  206 |     switch (instruction) {
      |            ^
cpu.cpp:206:12: warning: enumeration value ‘CMD_PUSH’ not handled in switch [-Wswitch-enum]
cpu.cpp:206:12: warning: enumeration value ‘CMD_ADD’ not handled in switch [-Wswitch-enum]
cpu.cpp:206:12: warning: enumeration value ‘CMD_SUB’ not handled in switch [-Wswitch-enum]
cpu.cpp:206:12: warning: enumeration value ‘CMD_DIV’ not handled in switch [-Wswitch-enum]
cpu.cpp:206:12: warning: enumeration value ‘CMD_MUL’ not handled in switch [-Wswitch-enum]
cpu.cpp:206:12: warning: enumeration value ‘CMD_SQRT’ not handled in switch [-Wswitch-enum]
cpu.cpp:206:12: warning: enumeration value ‘CMD_IN’ not handled in switch [-Wswitch-enum]
cpu.cpp:206:12: warning: enumeration value ‘CMD_OUT’ not handled in switch [-Wswitch-enum]
cpu.cpp:206:12: warning: enumeration value ‘CMD_PUSHR’ not handled in switch [-Wswitch-enum]
cpu.cpp:206:12: warning: enumeration value ‘CMD_POPR’ not handled in switch [-Wswitch-enum]
cpu.cpp: At global scope:
cpu.cpp:261:11: warning: no previous declaration for ‘ErrorCode cpuHlt(size_t*)’ [-Wmissing-declarations]
  261 | ErrorCode cpuHlt(size_t* index)
      |           ^~~~~~
